# modal-synth

./: .gitignore  .gitmodules  CMakeHelpers.txt  CMakeLists.txt  LICENSES.md  README.md
docs/: DSP Coding Standards.md
include/MiniModal/: PluginEditor.hpp  PluginProcessor.hpp
include/ModalSynth/: PluginEditor.hpp  PluginProcessor.hpp
include/dsp/: bonus.hpp  control.hpp  delay.hpp  dsp.hpp  filters.hpp  formant.hpp  mini_modal_synth.hpp  mod.hpp  modal_synth.hpp  osc.hpp  resonator.hpp
include/ui/: BoundCombobox.hpp  BoundSlider.hpp  LookAndFeel.hpp  MacroController.hpp
libs/doxygen-awesome-css/: doxygen-awesome.css
libs/randutils/: CMakeLists.txt  LICENSE.md
libs/randutils/include/: randutils.hpp
src/MiniModal/: PluginEditor.cpp  PluginProcessor.cpp
src/ModalSynth/: PluginEditor.cpp  PluginProcessor.cpp
src/dsp/: bonus.cpp  delay.cpp  filters.cpp  formant.cpp  mod.cpp  osc.cpp  resonator.cpp
src/ui/: BoundCombobox.cpp  BoundSlider.cpp  MacroController.cpp
tests/: dsp_bonus.cpp  start.cpp
